--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,31 @@ textarea { border: 0; font: 14px Georgia, Serif; overflow: hidden; resize: none;
 table { border-collapse: collapse; }
 table td, table th { border: 1px solid black; padding: 5px; }
 
-#header { height: 15px; width: 100%; margin: 20px 0; background: #222; text-align: center; color: white; font: bold 15px Helvetica, Sans-Serif; text-decoration: uppercase; letter-spacing: 20px; padding: 8px 0px; }
-
-#address { width: 250px; height: 150px; float: left; }
+#header {
+	width: 100%;
+    margin: 20px 0;
+    color: #222222;
+    text-align: center;
+    color: white;
+	font-weight: bold;
+    text-decoration: uppercase;
+	background: #ded7d7;
+    padding: 8px 0px; }
+h1#name_munacipality {
+    text-align: center;
+    /* font-weight: bold; */
+}
+#address {
+    width: 100%;
+    /* height: 96px; */
+    /* float: left; */
+    text-align: center;
+    font-weight: bold;
+}
+h2#invoice_receipt {
+    text-align: center;
+    margin: 20px;
+}
 #customer { overflow: hidden; }
 
 #logo { text-align: right; float: right; position: relative; margin-top: 25px; border: 1px solid #fff; max-width: 540px; max-height: 100px; overflow: hidden; }
